--- a/app/src/main/res/drawable/bg_time_unit.xml
+++ b/app/src/main/res/drawable/bg_time_unit.xml
@@ -1,16 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape android:shape="rectangle">
-            <solid android:color="@android:color/white" />
-            <corners android:radius="10dp" />
-            <stroke android:width="1dp" android:color="#E2E8F0" />
-        </shape>
-    </item>
-    <item android:right="8dp">
-        <bitmap
-            android:gravity="center_vertical|right"
-            android:src="@drawable/ic_code"
-            android:tint="#64748B" />
-    </item>
-</layer-list>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="#F1F5F9" />
+    <corners android:radius="8dp" />
+</shape>
