--- a/app/src/main/res/drawable/ic_layers.xml
+++ b/app/src/main/res/drawable/ic_layers.xml
@@ -1,9 +1,14 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-  <path
-      android:fillColor="#FF8A8A8A"
-      android:pathData="M11.99,18.54l-7.37,-5.73L3,14.07l9,7 9,-7 -1.63,-1.27 -7.38,5.74zM12,16l7.36,-5.73L21,9l-9,-7 -9,7 1.63,1.27L12,16z"/>
+
+    <path
+        android:fillColor="#000000"
+        android:pathData="M12,16L19,12L12,8L5,12L12,16Z" />
+    <path
+        android:fillColor="#000000"
+        android:pathData="M12,18.54L5,14.47V12L12,16L19,12V14.47L12,18.54Z" />
 </vector>
