--- a/app/src/main/res/layout/fragment_market.xml
+++ b/app/src/main/res/layout/fragment_market.xml
@@ -50,23 +50,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/appBarLayout"
-        android:layout_above="@+id/btnLoadMore"
         android:clipToPadding="false"
+        android:paddingBottom="100dp"
         tools:listitem="@layout/item_module_detail_market" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnLoadMore"
-        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-        android:layout_width="match_parent"
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginBottom="110dp"
-        android:paddingVertical="12dp"
-        android:text="Load More"
-        android:textAllCaps="false"
-        android:textColor="#6200EE"
-        app:cornerRadius="8dp"
-        app:strokeColor="#E0E0E0" />
+        android:layout_centerInParent="true"
+        android:visibility="gone"
+        tools:visibility="visible"/>
 
 </RelativeLayout>
