ui with api market wordlist

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -31,7 +31,11 @@
         android:id="@+id/marketFragment"
         android:name="com.group20.codevocab.ui.market.MarketFragment"
         android:label="Market"
-        tools:layout="@layout/fragment_market" />
+        tools:layout="@layout/fragment_market">
+        <action
+            android:id="@+id/action_marketFragment_to_wordListMarketFragment"
+            app:destination="@id/wordListMarketFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/groupFragment"
@@ -84,5 +88,14 @@
         android:name="com.group20.codevocab.ui.group.GroupDetailFragment"
         android:label="Group Detail"
         tools:layout="@layout/fragment_group_detail" />
+
+    <fragment
+        android:id="@+id/wordListMarketFragment"
+        android:name="com.group20.codevocab.ui.market.WordListMarketFragment"
+        android:label="WordListMarketFragment">
+        <argument
+            android:name="moduleId"
+            app:argType="string" />
+    </fragment>
 
 </navigation>
