--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,7 +28,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:padding="20dp"
-                android:src="@drawable/ic_lightbulb"
+                android:src="@drawable/ic_lightning"
                 app:tint="@android:color/white" />
         </com.google.android.material.card.MaterialCardView>
 
