--- a/app/src/main/res/layout/fragment_dictionary.xml
+++ b/app/src/main/res/layout/fragment_dictionary.xml
@@ -34,13 +34,13 @@
                     android:textSize="24sp"
                     android:textStyle="bold" />
 
-                <ImageView
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:src="@android:drawable/ic_menu_search"
-                    app:tint="#424242" />
+<!--                <ImageView-->
+<!--                    android:layout_width="24dp"-->
+<!--                    android:layout_height="24dp"-->
+<!--                    android:layout_alignParentEnd="true"-->
+<!--                    android:layout_centerVertical="true"-->
+<!--                    android:src="@android:drawable/ic_menu_search"-->
+<!--                    app:tint="#424242" />-->
             </RelativeLayout>
         </androidx.appcompat.widget.Toolbar>
 
@@ -77,10 +77,10 @@
                 android:paddingTop="8dp">
 
                 <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btnSortName"
                     style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
-                    android:backgroundTint="#EDE7F6"
                     android:text="A-Z"
                     android:textAllCaps="false"
                     android:textColor="#5E35B1"
@@ -90,6 +90,7 @@
                     app:iconTint="#5E35B1" />
 
                 <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btnSortDate"
                     style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
@@ -104,6 +105,7 @@
                     app:strokeWidth="0dp" />
 
                 <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btnSortWordCount"
                     style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
